Added Home content

--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,9 @@ Sacramento
 :root {
   --heading-font-family: "Sacramento", cursive;
   --default-font-family: "Outfit", sans-serif;
+  --primary-color: #0c5580;
+  --secondary-color: #d1d1d1;
   --text-color: white;
-  --primary-font: ;
 }
 
 body {
@@ -18,10 +19,55 @@ body {
 
 h1 {
   font-family: var(--heading-font-family);
+  font-size: 65px;
 }
 
 .background-img {
   position: absolute;
   z-index: -1;
   height: 100%;
+  width: 100%;
+}
+
+.logo {
+  font-family: var(--heading-font-family);
+  font-size: 30px;
+  line-height: 1.2;
+}
+
+.main-container {
+  padding: 90px 100px 55px;
+}
+
+.menu {
+  position: absolute;
+  width: 100%;
+}
+
+.home-container {
+  height: 420px;
+}
+
+.home-text {
+  font-size: 20px;
+}
+
+.social-media-links {
+  position: absolute;
+  top: 430px;
+  left: 40px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.social-media-links,
+a {
+  color: var(--text-color);
+}
+
+.social-media-links,
+a:hover {
+  color: var(--secondary-color);
 }
