--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,8 @@ h1 {
   margin: 0 auto;
 }
 
-.about-horizontal-social-media {
+.about-horizontal-social-media,
+.gallery-horizontal-social-media {
   text-align: center;
   margin-top: 20px;
   display: flex;
