--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,13 @@ h1 {
   max-width: 400px;
   display: block;
   margin: 0 auto;
+  box-shadow: var(--shadow);
+  padding-left: 15px;
+  border-radius: 10px;
+}
+
+.address {
+  color: var(--secondary-color);
 }
 
 .arrow-to-top {
@@ -54,7 +61,19 @@ h1 {
 }
 
 .contact-container {
-  margin-top: 50px;
+  margin-top: 40px;
+}
+
+.contact-info {
+  width: 340px;
+  box-shadow: var(--shadow);
+  margin: 0 auto;
+  padding: 25px 0;
+  border-radius: 10px;
+}
+
+.contact-links a {
+  font-size: 20px;
 }
 
 .home-artwork {
@@ -161,6 +180,9 @@ a:hover {
   .arrow-to-top {
     top: 510px;
     right: 18px;
+  }
+  .contact-info {
+    width: 300px;
   }
   .footer-text {
     font-size: 10px;
